Fixed router outlet so pages show up and show up under the nav tabs. This introduced a few issues. The nav tab alignment issue is semi-fixed, not exactly how I'd like it but it looks fine. The other issue involved the underlined navtab not following the currently selected page. That issue was also fixed.
Can start working on pages now I think.

--- a/src/app/navigation/navtabs/navtabs.component-theme.scss
+++ b/src/app/navigation/navtabs/navtabs.component-theme.scss
@@ -6,15 +6,11 @@
   $primary: map-get($paaw-theme, primary);
   $accent: map-get($paaw-theme, accent);
 
-  //Put all scss theming here, keep css styling in css file.
-  .navTabsContainerDiv { //from navtabs.component.html
-    background-color: mat-color($primary, 300);
-  }
-  //nav bar hover highlighting, generated by Angular but I consider it part of this component.
-  .mat-list-option-hover,
-  .mat-list-option.mat-list-item-focus,
-  .mat-nav-list .mat-list-item:hover,
-  .mat-nav-list .mat-list-item.mat-list-item-focus {
-    background-color: mat-color($primary, 300);
+  .mat-tab-link-container,
+  .mat-tab-list,
+  .mat-tab-links,
+  .mat-tab-link {
+    flex: 1 0.5 auto;
+    background-color: mat-color($primary, 200);
   }
 }
